src/components/Hangman/Hangman.css
* {
	margin: 0;
	box-sizing: border-box;
}
svg path, svg circle {
	stroke: #000;
	stroke-width: .55px;
	stroke-linecap: square;
	fill: none;
}
svg {
	height: 20%;
}
html, body {
	/* overflow-x: clip; */
    /* overflow-y: clip; */
	font-family: 'Noto Sans';
}
.hangman-state {
	position: absolute;
	margin-top: 11.5em;
	max-height: 8em;
}
#wrapper {
	display: flex;
    /* justify-content: center; */
	justify-content: flex-start;
    align-items: center;
    flex-flow: column;
	background-color: #2d2d2d;
    min-height: 100vh;
	position: relative;
	overflow: hidden;
}
#wrapper:before {
    content: "";
    position: absolute;
    width: 200%;
    height: 200%;
    top: -50%;
    left: -50%;
    background: url(../Images/logo.png) 0 0 repeat;
	filter: contrast(0.5);
    -webkit-transform: rotate(30deg);
    -moz-transform: rotate(30deg);
    -ms-transform: rotate(30deg);
    -o-transform: rotate(30deg);
    transform: rotate(30deg);
}
.hangman-container {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-flow: column;
	background-color: #fff;
	width: 100%;
	max-width: 55em;
	height: 85%;
	/* height: 80%; */
	/* border-radius: 30px; */
	position: absolute;
	margin-top: 3.5em;
	min-height: 100vh;
	overflow: auto;
}
.hangman-title {
	margin: 2.5em 0 .5em;
	font-size: 2rem;
}
#hangman-main-container {
	align-items: center;
    display: flex;
    flex-flow: column;
    width: 100%;
}
button {
    margin: 5px;
    min-width: fit-content;
    width: 3em;
    height: 3em;
	color: black;
    border-radius: 2px;
    text-transform: uppercase;
    background-color: #fff;
    border: 2px solid mediumspringgreen;
	border-radius: 5px;
}
button:disabled {
	border: 2px solid black;
    background-color: #808080;

}
button:focus, button:hover {
    background-color: mediumspringgreen;

}
#new-game-btn {
	background-color: #000;
    color: #fff;
}
#keyboard {
    width: 90%;
    display: flex;
    flex-flow: wrap;
    justify-content: center;
}
#keyboard-text {
	width: 39%;
	margin: 2em 0 .5em;
}
#button-container {
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	margin: 2em 0 8em;
}
.game-btn {
	min-width: 11em;
}
#new-game-container {
	width: 90%;
    text-align: center;
	margin-top: 3em;
}
.hide {
	display: none !important;
}
.disabled {
	pointer-events: none;
}
#answer-word {
	margin: 8em 0 1em;
}
#word-select-container {
	width: 70%;
    margin: 5%;
    /* transform: scale(1.4); */
	display: flex;
    flex-wrap: wrap;
    justify-content: center;
	align-items: flex-end;
    height: 50%;
}
#play-btn {
	background-color: black;
	color: #fff;
	/* position: absolute; */
    width: 60%;
    margin: 0 0 8em;
    border-radius: 10px;
    border: none;
	font-size: .8rem;
}
#hangman-newgame {
	overflow: hidden;
}
#mistakes {
	margin: 2em 0 0;
}
#instructions {
	/* width: 40%;
	height: 45em;
	position: relative;
	z-index: 1;
	text-align: end; */
	/* width: 45%; */
    /* height: 30%; */
    z-index: 1;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    /* top: 0; */
    /* position: absolute; */
	text-transform: uppercase;
	font-weight: 500;
	/* top: 10%; */
	/* position: absolute; */
	margin: 5em 0 0;
}
#right-arrow {
	width: 10%;
	margin: 1em;
	cursor: pointer;
}
#instructions-container {
    width: 80%;
	text-align: center;
	max-height: 95%;
	margin-top: 1.5em;
}
#instruction-title {
	margin: 1em;
	font-size: 2rem;
}
#instruction-btn {
	margin: 3em 0 10em;
    background: #000;
    color: #fff;
    border-radius: 10px;
    padding: 0 4em;
}

::-webkit-scrollbar-thumb {
    background:#00fa9a;
    border-radius: 30px;
    height: 10%;
}
::-webkit-scrollbar-track {
    background: #5fb379;
    border-radius: 30px;
}
::-webkit-scrollbar {
    width: 6px;
}
/* Responsiveness */

@media screen and (min-width: 768px) {
	.hangman-container {width: 75%; max-width: 55em; height: 0; border-radius: 20px; margin-top: 7.5em; min-height: 75vh;}
	#new-game-container {width: 80%; font-size: 1.5rem; margin: 2em 0;}
	#word-select-container {width: 55%; margin: 2em; transform: scale(1.2); height: 50%;}
	#keyboard {width: 60%;}
	#button-container, #instruction-btn {margin: 2em;}
	.hangman-state {margin-top: 10em; height: 18%;}
	.hangman-title {font-size: 2.5rem; margin: 1em 0 .5em;}
	.result-container {margin-top: -1em;}
	/* #answer-word {margin: 6em 0 1em;} */
	#footer {height: 2.5rem !important; font-size: .9rem !important;}
	#instructions {margin: 8em 0 0 8em;}
	.result {font-weight: 500;}
}
@media screen and (min-width: 1366px) {
	.hangman-container {min-height: 80vh; width: 70%;}
	#word-select-container {width: 25%; margin: 2em; transform: scale(1.5); height: 50%;}
	#new-game-container {width: 40%; font-size: 1.5rem;}
	#hangman-instructions {overflow: hidden;}
	#instructions {margin: 8em 0 0 12em;}
	.hangman-state {margin-top: 12em;}
	.hangman-title {margin: 2em 0 .5em;}
	#keyboard {width: 45%;}
	#answer-word {margin: 9em 0 1em;}
}

